--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">GitHubChallenge</string>
+    <string name="app_name">GitHub Challenge</string>
     <string name="title_activity_main">MainActivity</string>
     <!-- Strings used for fragments for navigation -->
     <string name="first_fragment_label">First Fragment</string>
@@ -9,4 +9,14 @@
 
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+
+    <!-- Strings utilizadas no Toast -->
+    <string name="toast_repositorios">Repositorio clicado: </string>
+
+    <!-- Strings utilizadas no card -->
+    <string name="nome_do_repositorio">Nome do Repositorio</string>
+    <string name="estrelas">Estrelas</string>
+    <string name="forks">Forks</string>
+    <string name="autor">Autor</string>
+
 </resources>
