fix: Adicionado novo layout com descrição dos repositorios

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,14 +11,19 @@
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
 
 
-
     <!-- Strings utilizadas no Toast -->
-    <string name="toast_repositorios">Repositorio clicado: </string>
+    <string name="toast_like">Like no repositorio : </string>
+    <string name="toast_share">Compartilhamento do repositorio : </string>
 
-    <!-- Strings utilizadas no card -->
+    <!-- Strings utilizadas nas views -->
     <string name="nome_do_repositorio">Nome do Repositorio</string>
-    <string name="estrelas">Estrelas</string>
-    <string name="forks">Forks</string>
-    <string name="autor">Autor</string>
+    <string name="estrelas">Estrelas: </string>
+    <string name="forks">Forks: </string>
+    <string name="autor">Autor: </string>
+    <string name="stars">Stars</string>
+    <string name="like">Like</string>
+    <string name="share">Share</string>
+    <string name="logo">Logo</string>
+    <string name="Avatar">Avatar</string>
 
 </resources>
